package org.example.PrototypeKhaled;

public enum BouwStatus {
    GEPLAND,
    GEREGELD,
    BETAALD,
    NIET_UITVOERBAAR,
    UITGEVOERD;
}
